--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@ layout: default
 </nav>
 
 <section id='content'>
+  {% for post in site.posts %}
+    {% if post.category == null %}
+    <article class='{{ post.type }}'>
+      <a name='{{ post.url }}' href='#{{ post.url }}'><h2>{% if post.type %}<code><b>{{ post.type }}</b> {{ post.path }}</code> {% endif %}{{ post.title }}</h2></a>
+      <section class='body'>
+        {{ post.content }}
+      </section>
+    </article>
+    {% endif %}
+  {% endfor %}
 {% for post in site.posts %}
+  {% if post.category != null %}
   <article class='{{ post.type }}'>
     <a name='{{ post.url }}' href='#{{ post.url }}'><h2>{% if post.type %}<code><b>{{ post.type }}</b> {{ post.path }}</code> {% endif %}{{ post.title }}</h2></a>
     <section class='body'>
       {{ post.content }}
     </section>
   </article>
+  {% endif %}
 {% endfor %}
 </section>
